carina-tui/src/snapshots/carina_tui__tui_snapshot_tests__snapshot_filter_mode_subnet.snap
---
source: carina-tui/src/tui_snapshot_tests.rs
expression: output
---
┌ Plan (Plan: 3 to create, 0 to update, 0 to delete) ──────────────────────────────────────────────────────────────────┐
│+ ec2.vpc vpc                                                                                                         │
│    └── + ec2.subnet subnet                                                                                           │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ Details ─────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│+ ec2.subnet subnet                                                                                                   │
│                                                                                                                      │
│  cidr_block: "10.0.1.0/24"                                                                                           │
│  vpc_id: vpc.vpc_id →                                                                                                │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
 n/N next/prev match  / search  q/Esc clear filter
