carina-tui/src/snapshots/carina_tui__tui_snapshot_tests__snapshot_map_key_diff.snap
---
source: carina-tui/src/tui_snapshot_tests.rs
expression: output
---
┌ Plan (Plan: 0 to create, 1 to update, 0 to delete) ──────────────────────────────────────────────────────────────────┐
│~ ec2.vpc vpc                                                                                                         │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ Details ─────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│~ ec2.vpc vpc                                                                                                         │
│                                                                                                                      │
│  cidr_block: "10.0.0.0/16"                                                                                           │
│  tags:                                                                                                               │
│    ~ Environment: "staging" -> "production"                                                                          │
│    + NewTag: "added"                                                                                                 │
│    - OldTag: "to-remove"                                                                                             │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
 Tab switch panel  j/k navigate/scroll  q quit
