carina-tui/src/snapshots/carina_tui__tui_snapshot_tests__snapshot_mixed_operations.snap
---
source: carina-tui/src/tui_snapshot_tests.rs
expression: output
---
┌ Plan (Plan: 1 to create, 1 to update, 1 to delete) ──────────────────────────────────────────────────────────────────┐
│~ ec2.vpc vpc                                                                                                         │
│    └── + ec2.security_group sg                                                                                       │
│- ec2.subnet old-subnet                                                                                               │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ Details ─────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│~ ec2.vpc vpc                                                                                                         │
│                                                                                                                      │
│  cidr_block: "10.0.0.0/16"                                                                                           │
│  enable_dns_support: true                                                                                            │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
 Tab switch panel  j/k navigate/scroll  q quit
