carina-tui/src/snapshots/carina_tui__tui_snapshot_tests__snapshot_moved_pure.snap
---
source: carina-tui/src/tui_snapshot_tests.rs
expression: output
---
┌ Plan (Plan: 0 to create, 0 to update, 0 to delete, 1 to move) ───────────────────────────────────────────────────────┐
│-> ec2.Vpc new_vpc                                                                                                    │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ Details ─────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│-> ec2.Vpc new_vpc                                                                                                    │
│                                                                                                                      │
│(no attributes)                                                                                                       │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
 / search  ↑↓/jk navigate  Tab switch panel  Enter detail  q/Esc quit
