carina-tui/src/snapshots/carina_tui__tui_snapshot_tests__snapshot_moved_with_changes.snap
---
source: carina-tui/src/tui_snapshot_tests.rs
expression: output
---
┌ Plan (Plan: 1 to create, 1 to update, 0 to delete) ──────────────────────────────────────────────────────────────────┐
│~ ec2.Vpc new_vpc                                                                                                     │
│    └── + ec2.Subnet (cidr_block: 10.0.1.0/24)                                                                        │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ Details ─────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│~ ec2.Vpc new_vpc                                                                                                     │
│                                                                                                                      │
│  tags:                                                                                                               │
│    + Name: "updated"                                                                                                 │
│  # (1 unchanged attribute hidden)                                                                                    │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
 / search  ↑↓/jk navigate  Tab switch panel  Enter detail  q/Esc quit
